[package]
name = "paraxis"
authors = ["Glenn Wallace glennw-coding@proton.me"]
description = "A maths library inspired by numpy which runs on the GPU"
version = "0.0.1"
edition = "2024"
keywords = ["maths", "gpu", "vectorization", "linear-algebra", "numpy"]
categories = ["mathematics"]
license = "MIT"
repository = "https://github.com/glennw-mt/paraxis"

[dependencies]
